[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
sp-io = { version = "3", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "academy-v0.1.0" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "academy-v0.1.0" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "academy-v0.1.0" }

